# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
gendiff/: __init__.py  dataset.py  gendiff.py  stylish.py
gendiff/formaters/: formaters.py  formaters_inner.py  formatest.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_dataset_and_stylish.py  test_exceptions.py  test_flat_json.py  test_flat_yaml.py  test_formaters.py  test_json.py  test_recursive.py
tests/fixtures/flat_json/: empty_and_filled_result  similar.json  similar_result
tests/fixtures/flat_yaml/: any_format_result  one_line_format_1.yaml  one_line_format_2.yaml  similar_result  strings_format_1.yaml  strings_format_2.yaml
tests/fixtures/recursive/: example_result.json
tests/fixtures/stylish/: result_1
