[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "JSON/YAML files comparing tool"
authors = ["Ivlev Nikita <thel4stofme@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/NMorphey/python-project-50"


[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'


[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
