[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "JSON/YAML files comparing tool"
authors = ["Ivlev Nikita <thel4stofme@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
  { include = "gendiff/formaters" }
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/NMorphey/python-project-50"


[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
